# forge

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cli/commands/: chat.rs  config.rs  edit.rs  exec.rs  mod.rs  search.rs  shell.rs  status.rs  workflow.rs
src/config/: client.rs  mod.rs
src/forge_process/: executor.rs  mod.rs  safety.rs  shell.rs  workflow.rs
src/fs/: glob.rs  mod.rs  operations.rs  search.rs  walker.rs  watcher.rs
src/http/: client.rs  json.rs  mod.rs  request.rs  response.rs
src/terminal/: editor.rs  history.rs  input.rs  mod.rs  output.rs  raw.rs
